--- a/scss/pages/_guide.scss
+++ b/scss/pages/_guide.scss
@@ -64,7 +64,6 @@
   &__chapter-sections {
     grid-area: details;
     display: grid;
-    grid-template-rows: 4rem;
 
     padding: 2rem 0;
   }
